refactor: Update modal titles and improve layout for institution and sections components

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -128,7 +128,7 @@
 
 <ng-template #selectInstitutionContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
-        <h5 class="modal-title" id="exampleModalLabel">Select Institution</h5>
+        <h5 class="modal-title" id="modalLabel1">Select Institution</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectInstitutionModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
@@ -148,7 +148,7 @@
 
 <ng-template #selectAppContent role="document" let-modal>
     <div class="modal-header p-3 bg-primary-subtle">
-        <h5 class="modal-title" id="exampleModalLabel">Select Application</h5>
+        <h5 class="modal-title" id="modalLabel2">Select Application</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="closeSelectApplicationModal()" ></button>
     </div>
     <div style="background-color: #F3F3F9; padding: 1rem;">
