--- a/src/app/shared/generic-app-table/generic-app-table.component.scss
+++ b/src/app/shared/generic-app-table/generic-app-table.component.scss
@@ -27,3 +27,15 @@
 // .table-bordered th, .table-bordered td {
 //     border: 1px solid #dee2e6; 
 // }
+
+.table-xs {
+    font-size: 12px;
+  }
+  
+  .table-xs td {
+    padding: 7px 12px; 
+  }
+
+  .table-xs th {
+    padding: 8.5px 12.5px; 
+  }
