--- a/src/app/pages/general/institution/institution.component.html
+++ b/src/app/pages/general/institution/institution.component.html
@@ -72,29 +72,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                <ng-template #content role="document" let-modal>
-                    <div class="modal-header bg-light p-3">
-                        <h5 class="modal-title" id="exampleModalLabel">Create Institution</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')"></button>
-                    </div>
-                    <form (ngSubmit)="createInstitution()" [formGroup]="institutionForm" class="tablelist-form" autocomplete="off">
-                        <div class="modal-body">
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Institution Name</label>
-                                <input type="text" id="name" class="form-control" placeholder="Enter Institution Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && form['name'].errors }" />
-                                <div class="invalid-feedback">Please enter an institution name</div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <div class="hstack gap-2 justify-content-end">
-                                <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="closeCreateInstitutionModal()">Cancel</button>
-                                <button type="submit" class="btn btn-primary" id="add-btn">Create</button>
-                            </div>
-                        </div>
-                    </form>
-                </ng-template>
   
                 <div id="elmLoader" *ngIf="loading">
                     <div class="spinner-border text-primary avatar-sm" role="status">
@@ -104,4 +81,26 @@
             </div>
         </div>
     </div>
+
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header bg-light p-3">
+            <h5 class="modal-title" id="modalLabel">Create Institution</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modal.dismiss('Cross click')"></button>
+        </div>
+        <form (ngSubmit)="createInstitution()" [formGroup]="institutionForm" class="tablelist-form" autocomplete="off">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" id="name" class="form-control" placeholder="Enter Institution Name" required formControlName="name" [ngClass]="{ 'is-invalid': submitted && form['name'].errors }" />
+                    <div class="invalid-feedback">Please enter a name</div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="closeCreateInstitutionModal()">Cancel</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Create</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
 </div>
