--- a/src/app/shared/generic-app-table/generic-app-table.component.html
+++ b/src/app/shared/generic-app-table/generic-app-table.component.html
@@ -3,7 +3,7 @@
     <div class="row g-3">
         <div class="col-xxl-12 col-sm-12">
             <div class="search-box">
-                <input type="text" [(ngModel)]="searchTerm" placeholder="Search..." class="form-control search bg-light border-light"/>
+                <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="onSearchChange()" placeholder="Search..." class="form-control search bg-light border-light"/>
                 <i class="ri-search-line search-icon"></i>
             </div>
         </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="d-flex align-items-center mb-2 mb-md-0">
                 <label for="pageSize" class="my-auto me-2">Rows</label> 
-                <select id="pageSize" [(ngModel)]="pageSize" (change)="onPageChange(0)" class="form-select" style="width: auto;"><option *ngFor="let size of [5, 10, 20]" [value]="size">{{ size }}</option></select>
+                <select id="pageSize" [(ngModel)]="pageSize" (change)="onPageSizeChange($event)" class="form-select" style="width: auto;"><option *ngFor="let size of [5, 10, 20]" [value]="size">{{ size }}</option></select>
             </div>
         </div>
     </div>
