--- a/src/app/pages/school/configuration/academics/academic-periods/academic-periods.component.html
+++ b/src/app/pages/school/configuration/academics/academic-periods/academic-periods.component.html
@@ -1,2 +1,81 @@
 <app-breadcrumbs title="Academic Periods" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card" id="academicPeriods">
+            <div class="card-header border-bottom-dashed">
+                <div class="row g-4 align-items-center">
+                    <div class="col-sm">
+                        <div><h5 class="card-title mb-0"><i class=" ri-calendar-event-fill text-muted fs-18 align-middle me-1">     </i>Academic Periods</h5></div>
+                    </div>
+                    <div class="col-sm-auto">
+                        <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-add-line align-bottom me-1"></i> Create Period</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <generic-app-table 
+                [headers]="headers" 
+                [data]="academicPeriods" 
+                [showActions]="true"  
+                [showDelete]="false"
+                [customTemplates]="{ 'isActive': statusTemplate }"
+                (editClicked)="editModal(content, $event)">
+            </generic-app-table>
+
+                <ng-template #statusTemplate let-status let-row="row">
+                    <div class="status">
+                        <span class="badge text-uppercase" [ngClass]="{ 'bg-success-subtle text-success': status === true, 'bg-danger-subtle text-danger': status !== true }">{{ getStatusLabel(status) }}</span>
+                    </div>
+                </ng-template>
+        </div>
+    </div>
+
+    <div id="elmLoader" *ngIf="loading">
+        <div class="spinner-border text-primary avatar-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+
+    <ng-template #content role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title" id="modalLabel">{{isCreateMode ? "Create" : "Update"}} Academic Period</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form  class="tablelist-form" autocomplete="off" [formGroup]="academicPeriodForm" (ngSubmit)="onSubmit()">
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Academic Year</label>
+                    <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" required formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['academicYearId'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Please select an academic term</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Academic Term</label>
+                    <ng-select [items]="academicTerms" bindLabel="name" id="academicTerm" bindValue="id" required formControlName="academicTermId" placeholder="Select Academic Term" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['academicTermId'].invalid }"></ng-select>
+                    <div class="invalid-feedback">Please select an academic year</div>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label mb-0">Is Active</label>
+                    <select class="form-select" aria-label=".form-select-sm" formControlName="isActive" [ngClass]="{ 'is-invalid': submitted && academicPeriodForm.controls['isActive'].invalid }">
+                        <option selected [ngValue]="null">Select status</option>
+                        <option [ngValue]="true">Yes</option>
+                        <option [ngValue]="false">No</option>
+                    </select>
+                    <div class="invalid-feedback" *ngIf="submitted && academicPeriodForm.controls['isActive'].invalid">Please select an option</div>
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input  type="text" id="name" class="form-control" placeholder="Enter Academic Period Name" formControlName="name" readonly>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+</div>
